--- a/cfn-templates/dh.cform.openvpn-ec2-pub.yaml
+++ b/cfn-templates/dh.cform.openvpn-ec2-pub.yaml
@@ -1,5 +1,4 @@
-#https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-ec2-priv.yaml
-
+#https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-launch-pub.yaml
 AWSTemplateFormatVersion: '2010-09-09'
 Description: >
   Launch Template EC2 Server for OpenVPN Implementation.
@@ -20,14 +19,14 @@ Parameters:
 
 #--- AWS-Specific Parameter Type
 #-------------------------------------------
-  PrivateSubnetIdA:
-    Description: Private Subnet ID AZ-A
+  PublicSubnetIdA:
+    Description: Public Subnet ID AZ-A
     Type: AWS::EC2::Subnet::Id
 #-------------------------------------------
-#--- Private Security Group Resource ID
+#--- Public Security Group Resource ID
 #-------------------------------------------
-  PrivateSgResourceId:
-    Description: Private Security Group ID AZ-A
+  PublicSgResourceId:
+    Description: Public Security Group ID AZ-A
     Type: AWS::EC2::SecurityGroup::Id
 #-------------------------------------------
 
@@ -37,13 +36,13 @@ Resources:
 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# PRIVATE EC2 DEFINITION
+# PUBLIC EC2 DEFINITION
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#--- Private EC2 Instance
+#--- Public EC2 Instance
 #-------------------------------------------
-  PrivateEC2Instance:
+  PublicEC2Instance:
     Type: AWS::EC2::Instance
 #.............................
     CreationPolicy:
@@ -56,7 +55,7 @@ Resources:
       Tags:
         -
           Key: "Name"
-          Value: "openvpn-private"
+          Value: "openvpn-public"
 #.............................
       AvailabilityZone:
         'Fn::Select':
@@ -72,9 +71,9 @@ Resources:
       KeyName: !Sub "dh.SSH.Default_${AWS::Region}"
       Monitoring: false
 #      SubnetId:
-#        Ref: PrivateSubnetIdA
+#        Ref: PublicSubnetIdA
 #      SecurityGroupIds:
-#        - !Ref PrivateSgResourceId
+#        - !Ref PublicSgResourceId
 #.............................
       BlockDeviceMappings: 
       - 
@@ -87,13 +86,13 @@ Resources:
 #.............................
       NetworkInterfaces: 
       - 
-        Description: "Primary Private NIC"
+        Description: "Primary Public NIC"
         DeleteOnTermination: true
         DeviceIndex: 0
-        PrivateIpAddress: 10.0.0.10
-        SubnetId: !Ref PrivateSubnetIdA
+        PrivateIpAddress: 10.0.128.10
+        SubnetId: !Ref PublicSubnetIdA
         GroupSet: 
-          - !Ref PrivateSgResourceId
+          - !Ref PublicSgResourceId
 #.............................
       UserData:
         Fn::Base64:
@@ -102,11 +101,11 @@ Resources:
             # Update Packages, inc. aws-cfn-bootstrap
             yum update -y
             # Start cfn-init
-            /opt/aws/bin/cfn-init -v --configsets Step1 --stack ${AWS::StackId} --resource PrivateEC2Instance --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
+            /opt/aws/bin/cfn-init -v --configsets Step1 --stack ${AWS::StackId} --resource PublicEC2Instance --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
             # Start up the cfn-hup daemon to listen for changes to the EC2 instance metadata
             #/opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
             # All done so signal success
-            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PrivateEC2Instance --region ${AWS::Region}
+            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PublicEC2Instance --region ${AWS::Region}
 #.............................
     Metadata:
       Comment: Metadata description here.
@@ -123,9 +122,11 @@ Resources:
           Step1:
             - configMisc
             - configRepo
+#            - configWebServer
             - configIPtables
             - configLogs
             - configHardenSsh
+            - configOpenvpn
             - configEasyRSA
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #        configTemplate:
@@ -172,16 +173,35 @@ Resources:
               command: "systemctl enable yum-cron"
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+# This is included just for a quick initial test
+#        configWebServer:
+#          packages:
+#            yum:
+#              httpd: []
+#          files:
+#            "/var/www/html/index.html":
+#              content: !Sub |
+#                <h1>Hello from ${AWS::StackId}<h1>
+#              mode: '000644'
+#              owner: root
+#              group: root
+#          services:
+#            sysvinit:
+#              httpd:
+#                enabled: true
+#                ensureRunning: true
+
+#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
         configIPtables:
           packages:
             yum:
               iptables-services: []
           sources:
-            /tmp: "https://s3.eu-central-1.amazonaws.com/dh.scripts/iptables/dh.cform.openvpn-ec2-priv-iptables.sh.tar.gz"
+            /tmp: "https://s3.eu-central-1.amazonaws.com/dh.scripts/iptables/dh.cform.openvpn-ec2-pub-iptables.sh.tar.gz"
           files:
             "/etc/sysctl.d/30-dh.iptables.conf":
               content: |
-                net.ipv4.ip_forward = 0
+                net.ipv4.ip_forward = 1
                 net.ipv6.conf.default.disable_ipv6 = 1
                 net.ipv6.conf.all.disable_ipv6 = 1
                 kernel.randomize_va_space = 1
@@ -195,8 +215,8 @@ Resources:
             1_kernelParams:
               command: "sysctl -p /etc/sysctl.d/30-dh.iptables.conf"
             2_iptRules:
-              cwd: "/tmp"
-              command: "./dh.cform.openvpn-ec2-priv-iptables.sh"
+              cwd: "/tmp/iptables-scripts"
+              command: "./dh.cform.openvpn-ec2-pub-iptables.sh"
           services:
               iptables:
                 enables: true
@@ -276,7 +296,7 @@ Resources:
             1b_f2ban:
               command: "systemctl enable fail2ban.service"            
             HardenSsh:
-              cwd: "/tmp"
+              cwd: "/tmp/ssh-scripts"
               command: "./dh.cform.openvpn-ec2-harden-ssh.sh"
           services:
               sshd:
@@ -286,45 +306,96 @@ Resources:
                   - "/etc/ssh/sshd_config"
 
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+        configOpenvpn:
+          packages:
+            yum:
+              openvpn: []
+          sources:
+            /etc/openvpn/server: "https://s3.eu-central-1.amazonaws.com/dh.scripts/openvpn/server/dh.vpn.server.xxx1194.conf.tar.gz"
+          files:
+            "/usr/local/bin/vpn-server-status":
+              content: |
+                #!/bin/bash
+                systemctl status openvpn-server@dh.vpn.server.udp1194
+                systemctl status openvpn-server@dh.vpn.server.tcp1194
+                journalctl -u openvpn-server@dh.vpn.server.udp1194
+                journalctl -u openvpn-server@dh.vpn.server.tcp1194
+              mode: '000755'
+              owner: ec2-user
+              group: ec2-user
+          commands:
+            1a_gen-HMAC:
+              cwd: "/etc/openvpn/server"
+              command: "openvpn --genkey --secret HMAC-sig.key"
+            1b_gen-HMAC:
+              cwd: "/etc/openvpn/server"
+              command: "aws s3 cp HMAC-sig.key s3://dh.scripts/openvpn/client/"
+            2_enableLogTimestamps:
+              cwd: "/usr/lib/systemd/system"
+              command: "cp openvpn-server@.service openvpn-server@.service.bak;sed -i 's/ --suppress-timestamps//g' openvpn-server@.service"
+            3_addPATH:
+              command: |
+                printf '\nPATH="/usr/local/bin:$PATH"\n' >> /home/ec2-user/.bashrc
+          services:
+              openvpn:
+                enables: true
+                ensureRunning: true
+                files:
+                  - "/etc/openvpn/server/dh.vpn.server.udp1194.conf"
+                  - "/etc/openvpn/server/dh.vpn.server.tcp1194.conf"
+
+#,,,,,,,,,,,,,,,,,,,,,,,,,,,,
         configEasyRSA:
           packages:
             yum:
               easy-rsa: []
-          files:
-            "/usr/local/easy-rsa/vars":
-              content: |
-                set_var EASYRSA_REQ_CN "dh.vpn.cert-auth"
-                set_var EASYRSA_BATCH "yes"
-                set_var EASYRSA_ALGO ec
-                set_var EASYRSA_CURVE secp384r1
-                set_var EASYRSA_KEY_SIZE 4096
-              mode: '000644'
-              owner: root
-              group: root
           sources:
-            /tmp/sign-reqs: "https://s3.eu-central-1.amazonaws.com/dh.scripts/easyrsa/openvpn/sign-reqs/dh.easyrsa.openvpn.sign-reqs.tar.gz"
+            /usr/local/easy-rsa: "https://s3.eu-central-1.amazonaws.com/dh.scripts/easyrsa/openvpn/gen-reqs/dh.easyrsa.openvpn.vars.tar.gz"
           commands:
             1a_initPKI:
               command: "cp -r /usr/share/easy-rsa/3/* /usr/local/easy-rsa/"
             1b_initPKI:
               cwd: "/usr/local/easy-rsa"
               command: "./easyrsa init-pki"
-            2a_buildCA:
+            2a_genDH:
               cwd: "/usr/local/easy-rsa"
-              command: "./easyrsa build-ca nopass"
-            2b_buildCA:
+              command: "mv vars.gen-dh vars"
+            2b_genDH:
+              cwd: "/usr/local/easy-rsa"
+              command: "./easyrsa gen-dh"
+            2c_genDH:
               cwd: "/usr/local/easy-rsa/pki"
-              command: "tar -zcf - ca.crt | aws s3 cp - s3://dh.scripts/easyrsa/openvpn/dh.easyrsa.ca.crt.tar.gz"
-            3_importReqs:
+              command: "cp dh.pem /etc/openvpn/server/"
+            3a_genSVR:
               cwd: "/usr/local/easy-rsa"
-              command: "for REQUEST in /tmp/sign-reqs/*; do ./easyrsa import-req $REQUEST $(basename $REQUEST .req); done"
-            4a_signReqs:
+              command: "mv vars.dh.vpn.server vars"
+            3b_genSVR:
               cwd: "/usr/local/easy-rsa"
-              command: "for REQUEST in /usr/local/easy-rsa/pki/reqs/*; do EntityName=$(basename $REQUEST .req); ./easyrsa sign-req ${EntityName##*.} $EntityName; done"
-            4b_signReqs:
-              cwd: "/usr/local/easy-rsa/pki/issued"
-              command: "tar -zcf - *.crt | aws s3 cp - s3://dh.scripts/easyrsa/openvpn/issued-certs/dh.easyrsa.openvpn.issued-certs.tar.gz"
-
+              command: "./easyrsa gen-req dh.vpn.server nopass"
+            3c_genSVR:
+              cwd: "/usr/local/easy-rsa/pki/private"
+              command: "cp dh.vpn.server.key /etc/openvpn/server/"
+            4a_genClnt1:
+              cwd: "/usr/local/easy-rsa"
+              command: "mv vars.dh.vpn.pfSn-ravi.client vars"
+            4b_genClnt1:
+              cwd: "/usr/local/easy-rsa"
+              command: "./easyrsa gen-req dh.vpn.pfSn-ravi.client nopass"
+            4c_genClnt1:
+              cwd: "/usr/local/easy-rsa/pki/private"
+              command: "aws s3 cp dh.vpn.pfSn-ravi.client.key s3://dh.scripts/openvpn/client/"
+            5a_genClnt2:
+              cwd: "/usr/local/easy-rsa"
+              command: "mv vars.dh.vpn.pfSn-virt.client vars"
+            5b_genClnt2:
+              cwd: "/usr/local/easy-rsa"
+              command: "./easyrsa gen-req dh.vpn.pfSn-virt.client nopass"
+            5c_genClnt2:
+              cwd: "/usr/local/easy-rsa/pki/private"
+              command: "aws s3 cp dh.vpn.pfSn-virt.client.key s3://dh.scripts/openvpn/client/"
+            6a_mvReqs:
+              cwd: "/usr/local/easy-rsa/pki/reqs"
+              command: "tar -zcf - *.req | aws s3 cp - s3://dh.scripts/easyrsa/openvpn/sign-reqs/dh.easyrsa.openvpn.sign-reqs.tar.gz"
 #,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 
 
@@ -342,9 +413,9 @@ Outputs: {}
 #  PubLaunchTmpltId:
 #    Description: ID of the launch template.
 #    Value:
-#      Ref: PrivateLaunchTemplate
+#      Ref: PublicLaunchTemplate
 #    Export:
 #      Name:
 #        Fn::Sub: ${AWS::StackName}-VPCID
-#---Private Subnet AZ-A Export
+#---Public Subnet AZ-A Export
 #-------------------------------------------
